Bug 78921 - save embedded fonts in Flat ODF
Summary: save embedded fonts in Flat ODF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: high major
Assignee: David Tardon
URL:
Whiteboard: target:4.3.0 target:4.5.0
Keywords:
: 74181 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-19 19:08 UTC by Juang Dse
Modified: 2015-02-12 16:31 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juang Dse 2014-05-19 19:08:26 UTC
1. Open new document.
2. Under File - Properties - Font choose Embed fonts
3. Save file as flat xml (fodt).
4. Crash
Comment 1 Joel Madero 2014-05-20 03:34:24 UTC
never worked correctly so setting version to oldest release of 4.1 (probably introduced in a beta but can't verify). 

New
Major - crash/loss of data
High - default seems appropriate

Lubos - cc'ed you since you implemented embedded fonts according to release notes :)

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Commit Notification 2014-05-21 06:01:15 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c354deac3c6174b0e725c9bb6aab10b65a95fa0d

fdo#78921 Don't crash when there is no storage specified



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Luboš Luňák 2014-05-21 06:44:39 UTC
(In reply to comment #2)
> Maxim Monastirsky committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=c354deac3c6174b0e725c9bb6aab10b65a95fa0d
> 
> fdo#78921 Don't crash when there is no storage specified
> 
> Not sure it's a good idea to get here at all
> when exporting as flat xml, but anyway it
> shouldn't crash.

But it shouldn't silently lose data either. Saving fodt with a picture embeds the picture data directly in the xml, so the same should be possible with the font data. Except that I have no idea how to do that.
Comment 4 Maxim Monastirsky 2014-05-21 13:54:49 UTC
Hi Lubos,

Thanks for your feedback.

(In reply to comment #3)
> But it shouldn't silently lose data either.
Indeed, but *until* it's got implemented, we could catch that early (and possible also warn the user). And currently there will be a loss of data anyway, except now the document contents (which is far more important to the user than the fonts) would be saved, and the app won't crash.

About warning the user: Does adding the 'ALIEN' flag, and thus triggering the "This document may contain formatting or content that cannot be saved in the currently selected file format" dialog is enough? Or should we introduce some special dialog, and show it only if the "embed fonts" option is checked?
Comment 5 Matthew Cline 2014-10-25 02:33:16 UTC
Another example of this, with lots of info, at the RedHat Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=1156664
Comment 6 Commit Notification 2015-01-06 15:13:56 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f86a1dbf2a6761b23f9430b6bc61e789190290c9

fdo#78921 save embedded fonts in Flat ODF

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-02-12 16:31:27 UTC
*** Bug 74181 has been marked as a duplicate of this bug. ***