fdo#78921 Don't crash when there is no storage specified

Not sure it's a good idea to get here at all
when exporting as flat xml, but anyway it
shouldn't crash.

Change-Id: Ib2ce6b044b4395222a394312d49f5a01d157f9f3